MSS-1564-[add thumbnail to pdp]-fixed-iphone-thumbnail-issue-&-aligned-icons-fixed-thumbnail-positions

--- a/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/product/detail.scss
+++ b/mcsus/cartridges/app_custom_storefront_mcsus/cartridge/client/default/scss/product/detail.scss
@@ -156,7 +156,7 @@
             width: rem(40);
             height: rem(40);
             outline: none;
-            top: 48%;
+            top: 50%;
             
             @include media-breakpoint-down(lg) {
                 top: 47.5%;
@@ -194,6 +194,10 @@
                 }
             }
         }
+        .cs-carousel {
+            padding-bottom: 0;
+            margin-bottom: rem(24);
+        }
     }
 
     .main-carousel {
@@ -203,6 +207,7 @@
 
             .carousel-tile {
                 background-color: $white-smoke4;
+                display: inherit !important;
             }
             img {
 
@@ -393,12 +398,12 @@
     margin-bottom: rem(15);
 
     @include media-breakpoint-down(xs) {
-        margin-top: rem(-42);
+        margin-top: rem(-24.87);
         margin-bottom: rem(45);
     }
     .slick-slide {
-        width: rem(100) !important;
-        height: rem(100);
+        width: rem(102) !important;
+        height: rem(102);
         
         @include media-breakpoint-down(xs) {
             width: rem(53) !important;
@@ -475,7 +480,7 @@
             }
             @include media-breakpoint-down(md) {
                 position: absolute;
-                top: 98vh;
+                top: 96vh;
                 width: 100%;
                 margin-top: 0 !important;
                 left: 0 !important;
@@ -498,7 +503,7 @@
             }
             @include media-breakpoint-down(sm) {
                 position: absolute;
-                top: 98vh;
+                top: 96vh;
                 width: 100%;
                 margin-top: 0 !important;
                 left: 0 !important;
